--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,14 +1,17 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 156.96.36.1
-IPADDR_END 156.96.36.254
+IPADDR_START 156.96.33.1
+IPADDR_END 156.96.33.254
 NETMASK 24
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER test1 test1password 156.96.36.1-156.96.36.100
-USER test2 test2password 156.96.36.101 156.96.36.102 156.96.36.103 
-USER test3 test3password 156.96.36.104-156.96.36.254
+USER ckiller g094olsdjfauoe 156.96.33.1-156.96.33.50
+USER meeateat loeoijfmosoa 156.96.33.51-156.96.33.100
+USER peipei gl94klaw12m, 156.96.33.101-156.96.33.150
+USER wenxuan go39dkaowl 156.96.33.151-156.96.33.200
+USER cat 4mflo2jdoso 156.96.33.201-151.96.33.250
+
