--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,14 +1,17 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 156.96.94.1
-IPADDR_END 156.96.94.254
+IPADDR_START 156.96.34.1
+IPADDR_END 156.96.34.254
 NETMASK 24
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER cifang doento29dk 156.96.94.1-156.96.94.254
+USER stella fglrpti02p;d 156.96.34.1-156.96.34.100
+USER angelobaby gda-er234a-0dl. 156.96.34.101-156.96.34.150
+USER lookseedo ldoen10dakew 156.96.34.151-156.96.34.250
+
 
 
