--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,17 +1,17 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 156.96.34.1
-IPADDR_END 156.96.34.254
+IPADDR_START 156.96.35.1
+IPADDR_END 156.96.35.254
 NETMASK 24
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER stella fglrpti02p;d 156.96.34.1-156.96.34.100
-USER angelobaby gda-er234a-0dl. 156.96.34.101-156.96.34.150
-USER lookseedo ldoen10dakew 156.96.34.151-156.96.34.250
-
-
+USER driptaki lf-03kls;afn3,a 156.96.35.1-156.96.35.50
+USER Maxp lleocadsfjow 156.96.35.51-156.96.35.100
+USER zdffasdfzx ,vlsrtpe02ldpow 156.96.35.101-156.96.35.150
+USER jamm adf013ldkia,3 156.96.35.151-156.96.35.200
+USER sihynwoo ;apej5034lsa 156.96.35.201-156.96.35.250
 
