--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,17 +1,15 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 156.96.35.1
-IPADDR_END 156.96.35.254
+IPADDR_START 156.96.36.1
+IPADDR_END 156.96.36.254
 NETMASK 24
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER driptaki lf-03kls;afn3,a 156.96.35.1-156.96.35.50
-USER Maxp lleocadsfjow 156.96.35.51-156.96.35.100
-USER zdffasdfzx ,vlsrtpe02ldpow 156.96.35.101-156.96.35.150
-USER jamm adf013ldkia,3 156.96.35.151-156.96.35.200
-USER sihynwoo ;apej5034lsa 156.96.35.201-156.96.35.250
-
+USER jumpydude ldlado0p12la 156.96.36.1-156.96.36.50
+USER altf4 aeh9ek2jmda; 156.96.36.51-156.96.36.125
+USER orangesnkrskr xvsdry023lfa 156.96.36.126-156.96.36.175
+USER littlecrawfish lgodiwdlaoek 156.96.36.176-156.96.36.250
