--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,15 +1,17 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 156.96.36.1
-IPADDR_END 156.96.36.254
+IPADDR_START 156.96.37.1
+IPADDR_END 156.96.37.254
 NETMASK 24
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER jumpydude ldlado0p12la 156.96.36.1-156.96.36.50
-USER altf4 aeh9ek2jmda; 156.96.36.51-156.96.36.125
-USER orangesnkrskr xvsdry023lfa 156.96.36.126-156.96.36.175
-USER littlecrawfish lgodiwdlaoek 156.96.36.176-156.96.36.250
+USER kpyx gloaret0123la 156.96.37.1-156.96.37.50
+USER bndkaowe ;g;daoek290 156.96.37.51-156.96.37.100
+USER mc glddlltwmki1 156.96.37.101-156.96.37.150
+USER bricks ag0sl4sdoww 156.96.37.151-156.96.37-200
+USER alexandchu gcdrf209fdla 156.96.37.201-156.96.37-250
+
