--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,17 +1,15 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 156.96.37.1
-IPADDR_END 156.96.37.254
+IPADDR_START 156.96.38.1
+IPADDR_END 156.96.38.254
 NETMASK 24
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER kpyx gloaret0123la 156.96.37.1-156.96.37.50
-USER bndkaowe ;g;daoek290 156.96.37.51-156.96.37.100
-USER mc glddlltwmki1 156.96.37.101-156.96.37.150
-USER bricks ag0sl4sdoww 156.96.37.151-156.96.37-200
-USER alexandchu gcdrf209fdla 156.96.37.201-156.96.37-250
+USER seksek cx,slre-0302l 156.96.38.1-156.96.38.100
+USER tksmaster xowd0239lw 156.96.38.101-156.96.38.150
+USER kriswu glao39asol2 156.96.38.151-156.96.38.250
 
