--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,15 +1,12 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 156.96.38.1
-IPADDR_END 156.96.38.254
+IPADDR_START 156.96.65.1
+IPADDR_END 156.96.65.254
 NETMASK 24
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER seksek cx,slre-0302l 156.96.38.1-156.96.38.100
-USER tksmaster xowd0239lw 156.96.38.101-156.96.38.150
-USER kriswu glao39asol2 156.96.38.151-156.96.38.250
-
+USER test test123 156.96.65.1-156.96.65.254
