--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -9,4 +9,9 @@ NETMASK 24
 
 #format USER %username% %password% %ip addresses%
 
-USER test test123 156.96.65.1-156.96.65.254
+USER crooks lsfdgnaoe92 156.96.65.1-156.96.65.100
+USER zeze a02lf02spo0s 156.96.65.101-156.96.65.150
+USER choisen choisen ga903kla01lo 156.96.65.151-156.96.65.200
+USER weiyan flae02olda0w 156.96.65.201-156.96.65.250
+
+
