--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,17 +1,12 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 156.96.65.1
-IPADDR_END 156.96.65.254
+IPADDR_START 156.96.66.1
+IPADDR_END 156.96.66.254
 NETMASK 24
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER crooks lsfdgnaoe92 156.96.65.1-156.96.65.100
-USER zeze a02lf02spo0s 156.96.65.101-156.96.65.150
-USER choisen choisen ga903kla01lo 156.96.65.151-156.96.65.200
-USER weiyan flae02olda0w 156.96.65.201-156.96.65.250
-
-
+USER test test123 156.96.66.1
