--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -9,4 +9,7 @@ NETMASK 24
 
 #format USER %username% %password% %ip addresses%
 
-USER test test123 156.96.66.1
+USER mnn fgs0234ltsa0a 156.96.66.1-156.96.66.50
+USER llzzhu dksotlqwoi92l 156.96.66.51-156.96.66.150
+USER ryantx adfweriaspek 156.96.66.151-156.96.66.200
+USER alay gcksoer02la 156.96.66.201-156.96.66.250
