--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,15 +1,13 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 156.96.66.1
-IPADDR_END 156.96.66.254
+IPADDR_START 156.96.68.1
+IPADDR_END 156.96.68.254
 NETMASK 24
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER mnn fgs0234ltsa0a 156.96.66.1-156.96.66.50
-USER llzzhu dksotlqwoi92l 156.96.66.51-156.96.66.150
-USER ryantx adfweriaspek 156.96.66.151-156.96.66.200
-USER alay gcksoer02la 156.96.66.201-156.96.66.250
+USER eq2 fgkago29eoa 156.96.68.1-156.96.68-150
+USER lyez lfdoaid923oped 156.96.68.151-156.96.68.250
