--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,13 +1,13 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 156.96.68.1
-IPADDR_END 156.96.68.254
+IPADDR_START 156.96.69.1
+IPADDR_END 156.96.69.254
 NETMASK 24
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER eq2 fgkago29eoa 156.96.68.1-156.96.68-150
-USER lyez lfdoaid923oped 156.96.68.151-156.96.68.250
+USER eq2 fgkago29eoa 156.96.69.1-156.96.69.150
+USER lyez lfdoaid923oped 156.96.69.151-156.96.69.250
