--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,13 +1,15 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 156.96.70.1
-IPADDR_END 156.96.70.254
+IPADDR_START 156.96.73.1
+IPADDR_END 156.96.73.254
 NETMASK 24
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER eq2 fgkago29eoa 156.96.70.1-156.96.70.150
-USER lyez lfdoaid923oped 156.96.70.151-156.96.70.250
+USER lilbooma goh0awepw 156.96.73.1-156.96.73.50
+USER gunillion gboa03ls0wq2 156.96.73.51-156.96.73.100
+USER cifang1 a;epgt023po30- 156.96.73.101-156.96.73.200
+USER recaptcha foad923iaeiow 156.96.73.201-156.96.73.250
