--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,15 +1,12 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 156.96.76.1
-IPADDR_END 156.96.76.254
+IPADDR_START 156.96.88.1
+IPADDR_END 156.96.88.254
 NETMASK 24
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER lilbooma goh0awepw 156.96.76.1-156.96.76.50
-USER gunillion gboa03ls0wq2 156.96.76.51-156.96.76.100
-USER cifang1 a;epgt023po30- 156.96.76.101-156.96.76.200
-USER recaptcha foad923iaeiow 156.96.76.201-156.96.76.250
+USER yeoshi asdfprat2-a 156.96.88.1-156.96.88.254
