--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,12 +1,12 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 156.96.89.1
-IPADDR_END 156.96.89.254
+IPADDR_START 156.96.190.1
+IPADDR_END 156.96.190.254
 NETMASK 24
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER iv26 dgafds23lda 156.96.88.1-156.96.88.254
+USER fhajee fgoa0eoa00e 156.96.190.1-156.96.190.254
