--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,17 +1,13 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 156.96.91.1
-IPADDR_END 156.96.91.254
+IPADDR_START 156.96.92.1
+IPADDR_END 156.96.92.254
 NETMASK 24
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER 21cabbage ldfwoeirkals 156.96.91.1-156.96.91.50
-USER casey goadlqwoe10 156.96.91.51-156.96.91.100
-USER smithaung bsdfge36sfdgsa 156.96.91.101-156.96.91.150
-USER sneakerclozet ga03las03wlka 156.96.91.151-156.96.91.200
-USER needluck fga0213l0aseo2 156.96.91.201-156.96.91.250
+USER aung10021 Aung10128 156.96.92.1-156.96.92.50
 
