--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,13 +1,12 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 156.96.92.1
-IPADDR_END 156.96.92.254
+IPADDR_START 156.96.142.1
+IPADDR_END 156.96.142.254
 NETMASK 24
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER aung10021 Aung10128 156.96.92.1-156.96.92.254
-
+USER ranay666 Aiden123 156.96.142.1-156.96.142.254
