--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,15 +1,12 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 156.96.93.1
-IPADDR_END 156.96.93.254
+IPADDR_START 156.96.95.1
+IPADDR_END 156.96.95.254
 NETMASK 24
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER h357415309 adfoweprls 156.96.93.1-156.96.93.1.100
-USER wintunaung glaforeapw 156.96.93.101-156.96.93.150
-USER unopposed fbsrt344tgdf 156.96.93.151-156.96.93.175
-USER Aron fladowekdo 156.96.93.176-156.96.93.225 
+USER kevin gfsfog82sdfa 156.96.95.1-156.96.95.50
