--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -10,3 +10,5 @@ NETMASK 24
 #format USER %username% %password% %ip addresses%
 
 USER kevin gfsfog82sdfa 156.96.166.1-156.96.166.50
+USER cody gadf93kawso 156.96.166.51-156.96.166.150
+
