--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,14 +1,12 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 156.96.166.1
-IPADDR_END 156.96.166.254
+IPADDR_START 207.228.55.1
+IPADDR_END 207.228.55.254
 NETMASK 24
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER kevin gfsfog82sdfa 156.96.166.1-156.96.166.50
-USER cody gadf93kawso 156.96.166.51-156.96.166.150
-
+USER test aung10021 207.228.55.1-207.228.55.254
