--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -1,12 +1,10 @@
 #ethernet configuration
 
 DEV dummy1
-IPADDR_START 82.180.32.1
-IPADDR_END 82.180.32.254
-NETMASK 24
+NETMASK 32
 
 #user information
 
 #format USER %username% %password% %ip addresses%
 
-USER test aung10021 82.180.32.1-82.180.32.254
+USER test aung10021 82.180.32.1-82.180.32.254  82.180.33.1-82.180.33.254
