--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -7,4 +7,5 @@ NETMASK 32
 
 #format USER %username% %password% %ip addresses%
 
-USER test aung10021 82.180.32.1-82.180.32.254  82.180.33.1-82.180.33.254
+USER suprem4local fkladoiwke 156.96.89.1-156.96.89.100
+USER fycccc 3gfadfgniewo 156.96.89.101-156.96.89.150
