--- a/proxy_conf.conf
+++ b/proxy_conf.conf
@@ -7,5 +7,13 @@ NETMASK 24
 
 #format USER %username% %password% %ip addresses%
 
-USER suprem4local fkladoiwke 156.96.89.1-156.96.89.100
-USER fycccc 3gfadfgniewo 156.96.89.101-156.96.89.150
+USER t1 t1uk 185.130.40.1-185.130.40.254
+USER t2 t2uk 185.130.41.1-185.130.41.254
+USER t3 t3uk 185.130.42.1-185.130.42.254
+USER t4 t3uk 185.130.43.1-185.130.43.254
+USER t5 t5DE 82.211.52.1-82.211.52.254
+USER t6 t6DE 82.211.53.1-82.211.53.254
+USER t7 t7de 185.192.39.1-185.192.39.254
+USER t8 t8de 185.192.37.1-185.192.37.254
+USER t9 t9dk 82.180.32.1-82.180.32.254
+USER t10 t10dk 82.180.33.1-82.180.33.254
